Move constants around, add logging stripped before.